--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "framer-motion": "^11.11.1",
+    "fullpage.js": "^4.0.29",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-fullpage": "^0.1.19",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.0",
     "sass": "^1.79.4",
     "web-vitals": "^4.2.3"
