--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.0",
     "sass": "^1.79.4",
+    "swiper": "^11.1.14",
     "web-vitals": "^4.2.3"
   },
   "scripts": {
