--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-fullpage": "^0.1.19",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
