--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "framer-motion": "^11.11.1",
+    "fr": "^1.2.2",
+    "framer-motion": "^11.11.9",
     "fullpage.js": "^4.0.29",
+    "gsap": "^3.12.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-fullpage": "^0.1.19",
