--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "framer-motion": "^11.11.9",
     "fullpage.js": "^4.0.29",
     "gsap": "^3.12.5",
+    "opentype.js": "^1.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-fullpage": "^0.1.19",
