--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "animate.css": "^4.1.1",
     "fr": "^1.2.2",
     "framer-motion": "^11.11.9",
     "fullpage.js": "^4.0.29",
     "gsap": "^3.12.5",
     "opentype.js": "^1.3.4",
+    "parallax-js": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-fullpage": "^0.1.19",
