--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "fullpage.js": "^4.0.29",
     "gsap": "^3.12.5",
     "opentype.js": "^1.3.4",
+    "pannellum": "^2.5.6",
+    "panolens": "^0.12.1",
     "parallax-js": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
