--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gulp": "gulp",
+    "sass": "gulp sass",
+    "uncss": "gulp uncss",
+    "watch": "gulp watch"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +56,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gulp": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uncss": "^1.0.6"
   }
 }
